added add new button added delete button (with confirm dialog)

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "materialize-css": "^0.100.2",
     "style-loader": "^0.20.1",
     "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuejs-dialog": "^0.4.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
